# argus-sdk

./: .env.example  README.md  pyproject.toml  requirements.txt
argus/: __init__.py  db.py  evals.py  judge.py  session.py
argus/engine/: __init__.py  eval_engine.py  loader.py  pattern_detector.py  rca_engine.py
examples/: business_evals.py  quickstart.py
tests/: test_engine.py  test_session.py
