[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "argus-sdk"
version = "0.1.0"
description = "Python SDK for the Argus AI agent observability platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "supabase>=2.0.0",
    "anthropic>=0.25.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://argusobs.vercel.app"
Repository = "https://github.com/amitgarg73/argus-sdk"
